# sherpa-tts-pipeline

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements-colab.txt  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  dataset-format.md  model-release.md  pipeline.md
examples/: text_samples.txt  voice.yaml  voice_rescue.yaml
notebooks/: build_dataset_colab.ipynb  train_piper_colab.ipynb
scripts/: clone_dataset_audio_format.py  prepare_uvr_batch.ps1  rebuild_dataset_from_uvr.py
src/sherpa_tts_pipeline/: cli.py  config.py  doctor.py
src/sherpa_tts_pipeline/dataset/: __init__.py  audio.py  build.py  report.py  review.py
src/sherpa_tts_pipeline/export/: __init__.py  piper_onnx.py
src/sherpa_tts_pipeline/infer/: __init__.py  sherpa.py
src/sherpa_tts_pipeline/prepare/: __init__.py  normalize.py
src/sherpa_tts_pipeline/utils/: logging.py  paths.py
tests/: test_dataset_append_dedup.py  test_dataset_smoke.py  test_doctor_smoke.py  test_export_helpers.py  test_infer_smoke.py  test_prepare_modes.py  test_prepare_smoke.py  test_review_report_smoke.py
