[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherpa-tts-pipeline"
version = "0.1.0"
description = "Simple CLI and library for building custom TTS voices."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "kymuco" }]
dependencies = [
  "PyYAML>=6.0",
  "ctranslate2>=4.0.0",
  "faster-whisper>=1.1.0",
  "soundfile>=0.12.1",
  "sherpa-onnx-bin",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
sherpa-tts = "sherpa_tts_pipeline.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
